setting for vercel

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1 class="text-white text-4xl font-titulo italic">Portafolio Profesional</h1>
             <span class="text-white text-lg font-edily mt-4">Soluciones innovadoras en software</span>
             <button class="mt-6 bg-blue-900 text-white font-titulo tracking-wider py-2 px-6 rounded hover:bg-blue-700 transition">
-                Mis Servicios
+                Contactame
             </button>
         </div>
     </section>
