--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
             </div>
             <div>
                 <label for="message" class="block text-sm font-semibold py-2">Mensaje:</label>
-                <textarea id="message" name="message" required 
-                    class="w-full h-60 border border-gray-300 rounded py-2 px-4 focus:outline-none focus:ring focus:ring-blue-300">
-                </textarea>
+                <textarea id="message" name="message" required class="w-full h-60 border border-gray-300 rounded focus:outline-none focus:ring focus:ring-blue-300"></textarea>
                 <span class="text-sm text-red-600 hidden" id="message-error">Mensaje inválido</span>
             </div>
             <button type="submit" class="w-full bg-blue-900 text-white font-titulo py-2 rounded hover:bg-blue-700 transition">
