--- a/index.html
+++ b/index.html
@@ -134,6 +134,6 @@
       
 
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="./script.js?v=1.0"></script>
 </body>
 </html>
