adding func to button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             <span class="text-white text-lg font-edily mt-4">Soluciones innovadoras en software</span>
             <button 
                 id='contact-button'
-                style="display:none;" onload="this.display=block" class="mt-6 bg-blue-900 text-white font-titulo tracking-wider py-2 px-6 rounded hover:bg-blue-700 transition">
+                style="display:none;" 
+                onload="this.display=block" 
+                onclick="window.location.href='#contact'"
+                class="mt-6 bg-blue-900 text-white font-titulo tracking-wider py-2 px-6 rounded hover:bg-blue-700 transition">
                 Contactame
             </button>
         </div>
