--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <!-- <script type="module" src="./script.js"></script>   -->
     
     <!-- ESTA VERSION FUNCIONA PARA DESPLEGAR EN VERCEL-->
-        <spt type="module" src="./scriptVercel.js"></scpt>  
+        <script type="module" src="./scriptVercel.js"></script>  
     
 </body>
 </html>
