fixed of ancors in header

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           
           <nav >
             <ul class="flex flex-row gap-4 p-4 font-bold text-[8px] sm:text-xs md:text-sm lg:text-base">
-                  <li> <a href="#inicio" class="hover:underline"> Inicio </a> </li>
+                  <li> <a href="#home" class="hover:underline"> Inicio </a> </li>
                   <li> <a href="#mis-trabajos" class="hover:underline"> Mis trabajos </a> </li>
-                  <li> <a href="#contacto" class="hover:underline"> Contacto </a> </li>
+                  <li> <a href="#contact" class="hover:underline"> Contacto </a> </li>
               </ul>
           </nav>
           
